--- a/WebContent/tpl/contact.html
+++ b/WebContent/tpl/contact.html
@@ -2,7 +2,7 @@
 	 	 
     <div class="span12">
     	<h3>Contact me</h3>
-    	<p>I will be grateful for constructive comments, <a href="#">pull request</a> or bug fix.</p>
+    	<p>I will be grateful for constructive comments, <a href="https://github.com/Kibo/dialoguesBuilder">pull request</a> or bug fix.</p>
     	<ul>
     		<li><a href="https://groups.google.com/d/topic/craftyjs/_gw_gTHC2HU/discussion">Crafty group thread</a></li>
     		<li>tomasjurman@gmail.com</li>
