--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#builder">Chat Builder for video games</a>
+          <a class="brand" href="#builder">Dialogues builder for video games</a>
           <div class="nav-collapse collapse">
             <ul class="nav">	            	                                     
             	<li><a href="#builder">Builder</a></li> 
